@@ -84,3 +84,13 @@ PAID_PLAN_PRICE=
 CACHE_DRIVER=database
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
+
+# Default filesystem to store uploaded files.
+# Possible values: public|s3
+DEFAULT_FILESYSTEM=public
+
+# AWS keys for S3 when using this storage method
+AWS_KEY=
+AWS_SECRET=
+AWS_REGION=us-east-1
+AWS_BUCKET=
