@@ -19,3 +19,4 @@ Christian Fratta @hherebus
 Jaroslav Lichtblau @svetlemodry
 Lee Fenlan @themodem <lee@fenlan.uk>
 Aaron Johnson @aejnsn
+David Egan @degan6 <dwe@eganrm.com>
