@@ -35,8 +35,8 @@ class ResizeAvatars implements ShouldQueue
     public function handle()
     {
         if ($this->contact->has_avatar == 'true') {
-            $avatar_file = Storage::disk('public')->get($this->contact->avatar_file_name);
-            $avatar_path = Storage::disk('public')->url($this->contact->avatar_file_name);
+            $avatar_file = Storage::disk($this->contact->avatar_location)->get($this->contact->avatar_file_name);
+            $avatar_path = Storage::disk($this->contact->avatar_location)->url($this->contact->avatar_file_name);
             $avatar_filename_without_extension = pathinfo($avatar_path, PATHINFO_FILENAME);
             $avatar_extension = pathinfo($avatar_path, PATHINFO_EXTENSION);
 
@@ -44,13 +44,13 @@ class ResizeAvatars implements ShouldQueue
             $avatar_cropped_path = 'avatars/'.$avatar_filename_without_extension.'_'.$size.'.'.$avatar_extension;
             $avatar = Image::make($avatar_file);
             $avatar->fit($size);
-            Storage::disk('public')->put($avatar_cropped_path, $avatar->stream());
+            Storage::disk($this->contact->avatar_location)->put($avatar_cropped_path, $avatar->stream()->__toString());
 
             $size = 174;
             $avatar_cropped_path = 'avatars/'.$avatar_filename_without_extension.'_'.$size.'.'.$avatar_extension;
             $avatar = Image::make($avatar_file);
             $avatar->fit($size);
-            Storage::disk('public')->put($avatar_cropped_path, $avatar->stream());
+            Storage::disk($this->contact->avatar_location)->put($avatar_cropped_path, $avatar->stream()->__toString());
         }
     }
 }
